--- a/3/API/FacebookAPI/FacebookAPI.csproj
+++ b/3/API/FacebookAPI/FacebookAPI.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Enums\PlatformFilter.cs" />
     <Compile Include="FacebookAdMetadataProvider.cs" />
     <Compile Include="FacebookInsightsDataProvider.cs" />
+    <Compile Include="FacebookUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\FacebookRequestUtils.cs" />
   </ItemGroup>
