Added saving all reports by command parameter (-k=true)

--- a/3/API/DBM/DBM.csproj
+++ b/3/API/DBM/DBM.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBMUtility.cs" />
+    <Compile Include="Helpers\FileManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
