Facebook creative expansion. (#107)
Facebook Job(V2) with ads level. Migration job. Leaved old command for backward compatibility.

--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -114,6 +114,13 @@
     <Compile Include="Concrete\RevTrackRepository.cs" />
     <Compile Include="Concrete\SecurityRepository.cs" />
     <Compile Include="Concrete\SpecialPlatformRepository.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Daily\FbDailySummary.cs" />
+    <Compile Include="Entities\CPProg\Facebook\FbBaseSummary.cs" />
+    <Compile Include="Entities\CPProg\Facebook\FbEntity.cs" />
+    <Compile Include="MigrationsTD\201904221606279_FacebookCreativeExpansion.cs" />
+    <Compile Include="MigrationsTD\201904221606279_FacebookCreativeExpansion.Designer.cs">
+      <DependentUpon>201904221606279_FacebookCreativeExpansion.cs</DependentUpon>
+    </Compile>
     <Compile Include="SpecialPlatformProviders\Implementation\CommissionJunctionProvider.cs" />
     <Compile Include="SpecialPlatformProviders\Implementation\DspProvider.cs" />
     <Compile Include="SpecialPlatformProviders\Implementation\KochavaProvider.cs" />
@@ -195,6 +202,18 @@
     <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspOrderMetricValues.cs" />
     <Compile Include="Entities\CPProg\DSP\SummaryMetrics\DspCreativeDailyMetricValues.cs" />
     <Compile Include="Entities\CPProg\Base\BaseDailyMetricValues.cs" />
+    <Compile Include="Entities\CPProg\Facebook\AdSet\FbAdSet.cs" />
+    <Compile Include="Entities\CPProg\Facebook\AdSet\FbAdSetAction.cs" />
+    <Compile Include="Entities\CPProg\Facebook\AdSet\FbAdSetSummary.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Ad\FbAd.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Ad\FbAdAction.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Ad\FbAdSummary.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Ad\FbCreative.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Campaign\FbCampaign.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Campaign\FbCampaignAction.cs" />
+    <Compile Include="Entities\CPProg\Facebook\Campaign\FbCampaignSummary.cs" />
+    <Compile Include="Entities\CPProg\Facebook\FbAction.cs" />
+    <Compile Include="Entities\CPProg\Facebook\FbActionType.cs" />
     <Compile Include="Entities\CPProg\Kochava\KochavaItem.cs" />
     <Compile Include="Entities\CPProg\Summaries\AdSetSummary.cs" />
     <Compile Include="Entities\CPProg\SummaryMetrics\AdSetSummaryMetric.cs" />
@@ -1029,6 +1048,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201904021651556_Mig_JobExecution.resx">
       <DependentUpon>201904021651556_Mig_JobExecution.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201904221606279_FacebookCreativeExpansion.resx">
+      <DependentUpon>201904221606279_FacebookCreativeExpansion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
