--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -408,10 +408,11 @@
     <Compile Include="Commands\DA\DaSynchCommissionJunctionStats.cs" />
     <Compile Include="Commands\DA\DASynchCriteoStats.cs" />
     <Compile Include="Commands\DA\DASynchDBMStats2.cs" />
+    <Compile Include="Commands\DA\DASynchFacebookMigration.cs" />
+    <Compile Include="Commands\DA\DASynchFacebookStats.cs" />
     <Compile Include="Commands\DA\DASynchKochavaStats.cs" />
     <Compile Include="Commands\DA\DASynchYAMStats.cs" />
     <Compile Include="Commands\EOMSynchCPCCommand.cs" />
-    <Compile Include="Commands\DA\DASynchFacebookAdPreviews.cs" />
     <Compile Include="Commands\DA\DASynchDBMCreatives.cs" />
     <Compile Include="Commands\DA\DASeed.cs" />
     <Compile Include="Commands\DA\DASynchAdrollAds.cs" />
@@ -506,10 +507,29 @@
     <Compile Include="Etl\SearchMarketing\Loaders\AppleApiLoader.cs" />
     <Compile Include="Etl\SearchMarketing\Loaders\BingConvSummaryLoader.cs" />
     <Compile Include="Etl\SearchMarketing\Loaders\SearchDailySummaryLoaders.cs" />
-    <Compile Include="Etl\SocialMarketing\LoadersDA\FacebookAdPreviewLoader.cs" />
+    <Compile Include="Etl\SocialMarketing\Extracters\FacebookApiExtracter.cs" />
+    <Compile Include="Etl\SocialMarketing\Extracters\V2\FacebookAdMetadataExtracterV2.cs" />
+    <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\BaseFacebookEntityLoader.cs" />
+    <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\FacebookActionTypeLoader.cs" />
+    <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\FacebookCreativesLoader.cs" />
+    <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\FacebookAdSetsLoader.cs" />
+    <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\FacebookAdsLoader.cs" />
+    <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\FacebookCampaignsLoader.cs" />
+    <Compile Include="Etl\SocialMarketing\Extracters\V2\FacebookAdSetSummaryExtracterV2.cs" />
+    <Compile Include="Etl\SocialMarketing\Extracters\V2\FacebookAdSummaryExtracterV2.cs" />
+    <Compile Include="Etl\SocialMarketing\Extracters\V2\FacebookCampaignSummaryExtracterV2.cs" />
+    <Compile Include="Etl\SocialMarketing\Extracters\V2\FacebookDailySummaryExtracterV2.cs" />
+    <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\FacebookAdSetSummaryLoaderV2.cs" />
+    <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\FacebookAdSummaryLoaderV2.cs" />
+    <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\FacebookCampaignSummaryLoaderV2.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\FacebookAdSetSummaryLoader.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\FacebookAdSummaryLoader.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\FacebookCampaignSummaryLoader.cs" />
+    <Compile Include="Etl\SocialMarketing\LoadersDA\FacebookDailySummaryLoader.cs" />
+    <Compile Include="Etl\SocialMarketing\MigrationExtracters\FacebookDailyMigrationExtractor.cs" />
+    <Compile Include="Etl\SocialMarketing\MigrationExtracters\FacebookCampaignMigrationExtractor.cs" />
+    <Compile Include="Etl\SocialMarketing\MigrationExtracters\FacebookAdMigrationExtractor.cs" />
+    <Compile Include="Etl\SocialMarketing\MigrationExtracters\FacebookAdsetMigrationExtractor.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\AdformExtractors\AdformAdSetSummaryExtracter.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\AdformExtractors\AdformDailySummaryExtracter.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\AdformExtractors\AdformApiBaseExtractor.cs" />
@@ -562,7 +582,7 @@
     <Compile Include="Commands\DA\DASynchAdrollStats.cs" />
     <Compile Include="Commands\DA\DASynchAdvertisers.cs" />
     <Compile Include="Commands\DA\DASynchDBMStats.cs" />
-    <Compile Include="Commands\DA\DASynchFacebookStats.cs" />
+    <Compile Include="Commands\DA\DASynchFacebookStatsV2.cs" />
     <Compile Include="Commands\DA\DASynchOfferBudgetStats2.cs" />
     <Compile Include="Commands\DA\DASynchOfferBudgetStats.cs" />
     <Compile Include="Commands\DA\DASynchOfferDailySummaries.cs" />
@@ -678,8 +698,8 @@
     <Compile Include="Etl\SearchMarketing\Loaders\CallDailySummaryLoader.cs" />
     <Compile Include="Etl\SearchMarketing\Loaders\CriteoDailySummaryLoader.cs" />
     <Compile Include="Etl\SearchMarketing\Loaders\CriteoDailySummaryLoader2.cs" />
-    <Compile Include="Etl\SocialMarketing\Extracters\FacebookApiExtracter.cs" />
-    <Compile Include="Etl\SocialMarketing\LoadersDA\FacebookDailySummaryLoader.cs" />
+    <Compile Include="Etl\SocialMarketing\Extracters\V2\FacebookApiExtracterV2.cs" />
+    <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\FacebookDailySummaryLoaderV2.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\AdrollApiExtracter.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\AdrollConvCsvExtracter.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\AdrollCsvExtracter.cs" />
