--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -508,18 +508,18 @@
     <Compile Include="Etl\SearchMarketing\Loaders\AppleApiLoader.cs" />
     <Compile Include="Etl\SearchMarketing\Loaders\BingConvSummaryLoader.cs" />
     <Compile Include="Etl\SearchMarketing\Loaders\SearchDailySummaryLoaders.cs" />
-    <Compile Include="Etl\SocialMarketing\Extracters\FacebookApiExtracter.cs" />
-    <Compile Include="Etl\SocialMarketing\Extracters\V2\FacebookAdMetadataExtracterV2.cs" />
+    <Compile Include="Etl\SocialMarketing\Extractors\FacebookApiExtracter.cs" />
+    <Compile Include="Etl\SocialMarketing\Extractors\V2\FacebookAdMetadataExtractorV2.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\BaseFacebookEntityLoader.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\FacebookActionTypeLoader.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\FacebookCreativesLoader.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\FacebookAdSetsLoader.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\FacebookAdsLoader.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\EntitiesLoaders\FacebookCampaignsLoader.cs" />
-    <Compile Include="Etl\SocialMarketing\Extracters\V2\FacebookAdSetSummaryExtracterV2.cs" />
-    <Compile Include="Etl\SocialMarketing\Extracters\V2\FacebookAdSummaryExtracterV2.cs" />
-    <Compile Include="Etl\SocialMarketing\Extracters\V2\FacebookCampaignSummaryExtracterV2.cs" />
-    <Compile Include="Etl\SocialMarketing\Extracters\V2\FacebookDailySummaryExtracterV2.cs" />
+    <Compile Include="Etl\SocialMarketing\Extractors\V2\FacebookAdSetSummaryExtractorV2.cs" />
+    <Compile Include="Etl\SocialMarketing\Extractors\V2\FacebookAdSummaryExtractorV2.cs" />
+    <Compile Include="Etl\SocialMarketing\Extractors\V2\FacebookCampaignSummaryExtractorV2.cs" />
+    <Compile Include="Etl\SocialMarketing\Extractors\V2\FacebookDailySummaryExtractorV2.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\FacebookAdSetSummaryLoaderV2.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\FacebookAdSummaryLoaderV2.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\FacebookCampaignSummaryLoaderV2.cs" />
@@ -699,7 +699,7 @@
     <Compile Include="Etl\SearchMarketing\Loaders\CallDailySummaryLoader.cs" />
     <Compile Include="Etl\SearchMarketing\Loaders\CriteoDailySummaryLoader.cs" />
     <Compile Include="Etl\SearchMarketing\Loaders\CriteoDailySummaryLoader2.cs" />
-    <Compile Include="Etl\SocialMarketing\Extracters\V2\FacebookApiExtracterV2.cs" />
+    <Compile Include="Etl\SocialMarketing\Extractors\V2\FacebookApiExtractorV2.cs" />
     <Compile Include="Etl\SocialMarketing\LoadersDA\LoadersDAV2\FacebookDailySummaryLoaderV2.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\AdrollApiExtracter.cs" />
     <Compile Include="Etl\TradingDesk\Extracters\AdrollConvCsvExtracter.cs" />
