Update extractors to get YAM statistics and convert them to objects for the database.

--- a/3/API/Yahoo/Yahoo.csproj
+++ b/3/API/Yahoo/Yahoo.csproj
@@ -50,7 +50,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Const.cs" />
-    <Compile Include="HelperClasses.cs" />
+    <Compile Include="Models\HelperClasses.cs" />
+    <Compile Include="Models\ReportSettings.cs" />
     <Compile Include="YAMUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
