--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -257,6 +257,7 @@
     <Compile Include="Areas\ProgAdmin\Controllers\CampaignsController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\EmployeesController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\ExtraItemsController.cs" />
+    <Compile Include="Areas\ProgAdmin\Controllers\Facebook\FacebookController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\MainController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\MaintenanceController.cs" />
     <Compile Include="Areas\ProgAdmin\Controllers\PlatColMappingsController.cs" />
@@ -270,6 +271,8 @@
     <Compile Include="Areas\ProgAdmin\Models\DailySummariesVM.cs" />
     <Compile Include="Areas\ProgAdmin\Models\DashboardVM.cs" />
     <Compile Include="Areas\ProgAdmin\Models\ExtraItemsVM.cs" />
+    <Compile Include="Areas\ProgAdmin\Models\FacebookTotalsInfoVm.cs" />
+    <Compile Include="Areas\ProgAdmin\Models\FacebookLatestsInfoVm.cs" />
     <Compile Include="Areas\ProgAdmin\Models\ReportingVM.cs" />
     <Compile Include="Areas\ProgAdmin\Models\SpecialPlatformSummariesVm.cs" />
     <Compile Include="Areas\ProgAdmin\Models\StatsGaugeVM.cs" />
@@ -1194,6 +1197,8 @@
     <Content Include="Areas\Admin\Views\Shared\_LayoutAdmin.cshtml" />
     <Content Include="Areas\Admin\Views\web.config" />
     <Content Include="Areas\ProgAdmin\Views\ExtAccounts\IndexSpecialPlatformStats.cshtml" />
+    <Content Include="Areas\ProgAdmin\Views\Facebook\Totals.cshtml" />
+    <Content Include="Areas\ProgAdmin\Views\Facebook\Latests.cshtml" />
     <None Include="Properties\PublishProfiles\dagents_vm_staging.pubxml" />
     <Content Include="Views\Shared\EditorTemplates\DayOfWeek.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\DateTime.cshtml" />
