--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -430,11 +430,13 @@
     <Compile Include="Commands\Test\TestYAMCommand.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Common\ArchiveExctractors\Contract\IArchiveExtractor.cs" />
-    <Compile Include="Common\ArchiveExctractors\GzipArchiveExtractor.cs" />
-    <Compile Include="Common\ArchiveExctractors\ZipArchiveExtractor.cs" />
+    <Compile Include="Common\Extractors\ArchiveExctractors\Contract\IArchiveExtractor.cs" />
+    <Compile Include="Common\Extractors\ArchiveExctractors\GzipArchiveExtractor.cs" />
+    <Compile Include="Common\Extractors\ArchiveExctractors\ZipArchiveExtractor.cs" />
     <Compile Include="Common\CommandLineUtils.cs" />
     <Compile Include="Common\Compare.cs" />
+    <Compile Include="Common\Extractors\CsvExtractors\Contracts\ICsvExtractor.cs" />
+    <Compile Include="Common\Extractors\CsvExtractors\CsvAccountExtractor.cs" />
     <Compile Include="Common\JobExecutionManagement\CommandExecutionContext.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Models\AccountLogData.cs" />
     <Compile Include="Common\JobExecutionManagement\JobExecution\Models\JobExecutionLogData.cs" />
