--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -123,19 +123,20 @@
     <Compile Include="Entities\CPProg\DBM\SummaryMetrics\DbmBaseSummaryEntity.cs" />
     <Compile Include="Entities\CPProg\DBM\SummaryMetrics\DbmCreativeSummary.cs" />
     <Compile Include="Entities\CPProg\DBM\SummaryMetrics\DbmLineItemSummary.cs" />
-    <Compile Include="MigrationsTD\201904301624478_Mig_DbmCreativeExpansion.cs" />
-    <Compile Include="MigrationsTD\201904301624478_Mig_DbmCreativeExpansion.Designer.cs">
-      <DependentUpon>201904301624478_Mig_DbmCreativeExpansion.cs</DependentUpon>
     <Compile Include="Entities\CPProg\Facebook\Daily\FbDailySummary.cs" />
     <Compile Include="Entities\CPProg\Facebook\FbBaseSummary.cs" />
     <Compile Include="Entities\CPProg\Facebook\FbEntity.cs" />
-    <Compile Include="MigrationsTD\201904221606279_FacebookCreativeExpansion.cs" />
+    <Compile Include="MigrationsTD\201904301624478_Mig_DbmCreativeExpansion.cs" />
+    <Compile Include="MigrationsTD\201904301624478_Mig_DbmCreativeExpansion.Designer.cs">
+      <DependentUpon>201904301624478_Mig_DbmCreativeExpansion.cs</DependentUpon>
+	</Compile>
+	<Compile Include="MigrationsTD\201904221606279_FacebookCreativeExpansion.cs" />
+	<Compile Include="MigrationsTD\201904221606279_FacebookCreativeExpansion.Designer.cs">
+      <DependentUpon>201904221606279_FacebookCreativeExpansion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\201904252123496_Mig_EventConv_TransactionId.cs" />
     <Compile Include="Migrations\201904252123496_Mig_EventConv_TransactionId.Designer.cs">
       <DependentUpon>201904252123496_Mig_EventConv_TransactionId.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MigrationsTD\201904221606279_FacebookCreativeExpansion.Designer.cs">
-      <DependentUpon>201904221606279_FacebookCreativeExpansion.cs</DependentUpon>
     </Compile>
     <Compile Include="SpecialPlatformProviders\Implementation\CommissionJunctionProvider.cs" />
     <Compile Include="SpecialPlatformProviders\Implementation\DspProvider.cs" />
@@ -1067,6 +1068,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201904301624478_Mig_DbmCreativeExpansion.resx">
       <DependentUpon>201904301624478_Mig_DbmCreativeExpansion.cs</DependentUpon>
+	</EmbeddedResource>
     <EmbeddedResource Include="MigrationsTD\201904221606279_FacebookCreativeExpansion.resx">
       <DependentUpon>201904221606279_FacebookCreativeExpansion.cs</DependentUpon>
     </EmbeddedResource>
