--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -186,6 +186,21 @@
     <add key="YAM_WaitTime_Seconds" value="180" />
     <add key="YAMids_UsePixelParm" value="19685,27476,21328" /><!-- CovHouse,LornaJane,G&T -->
 
+    <!--Outdated-->
+    <add key="YAMMap_PostClickConv" value="Click Through Conversion" />
+    <add key="YAMMap_PostViewConv" value="View Through Conversion" />
+    <add key="YAMMap_PostClickRev" value="" />
+    <add key="YAMMap_PostViewRev" value="ROAS Action Value" />
+    <add key="YAMMap_StrategyName" value="Line" />
+    <add key="YAMMap_StrategyEid" value="Line ID" />
+    <add key="YAMMap_CreativeName" value="Ad" />
+    <add key="YAMMap_CreativeEid" value="Ad ID" />
+    <add key="YAMMap_AdSetName" value="Order" />
+    <add key="YAMMap_AdSetEid" value="Order ID" />
+    <add key="YAMMap_KeywordName" value="Creative Name" />
+    <add key="YAMMap_KeywordEid" value="Creative ID" />
+    <add key="YAMMap_SearchTermName" value="Pixel" />
+
     <add key="AdformAuthBaseUrl" value="https://id.adform.com/sts/connect/token" />
     <add key="AdformClientID" value="portal.directagents.us@clients.adform.com" />
     <add key="AdformClientSecret" value="zA6Fn7PEFk103Vf2FV93NzP66d2411QHL817m7B54B" />
