--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -410,6 +410,7 @@
     <Compile Include="Commands\DA\DASynchDBMStats2.cs" />
     <Compile Include="Commands\DA\DASynchKochavaStats.cs" />
     <Compile Include="Commands\DA\DASynchYAMStats.cs" />
+    <Compile Include="Commands\DA\DASynchYAMStats_Outdated.cs" />
     <Compile Include="Commands\EOMSynchCPCCommand.cs" />
     <Compile Include="Commands\DA\DASynchFacebookAdPreviews.cs" />
     <Compile Include="Commands\DA\DASynchDBMCreatives.cs" />
@@ -757,6 +758,11 @@
     <Compile Include="Etl\YAM\Loaders\YamDailySummaryLoader.cs" />
     <Compile Include="Etl\YAM\Loaders\YamLineSummaryLoader.cs" />
     <Compile Include="Etl\YAM\Loaders\YamPixelSummaryLoader.cs" />
+    <Compile Include="Etl\YAM\Outdated\TDDailyConValLoader.cs" />
+    <Compile Include="Etl\YAM\Outdated\TDStrategyConValLoader.cs" />
+    <Compile Include="Etl\YAM\Outdated\YamConValCsvExtracter.cs" />
+    <Compile Include="Etl\YAM\Outdated\YAMConValExtracters.cs" />
+    <Compile Include="Etl\YAM\Outdated\YAMExtracters.cs" />
     <Compile Include="Helpers\CommandHelper.cs" />
     <Compile Include="Helpers\ConfigurationHelper.cs" />
     <Compile Include="Helpers\EntityIdStorage.cs" />
