Add configuration values ​​to set different CSV report column names.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -185,6 +185,24 @@
     <add key="YAM_NumTries_RequestReport" value="12" />
     <add key="YAM_WaitTime_Seconds" value="180" />
     <add key="YAMids_UsePixelParm" value="19685,27476,21328" /><!-- CovHouse,LornaJane,G&T -->
+    <add key="YAM_Map_Day" value=""/>
+    <add key="YAM_Map_Impressions" value=""/>
+    <add key="YAM_Map_Clicks" value=""/>
+    <add key="YAM_Map_ClickThroughConversion" value=""/>
+    <add key="YAM_Map_ViewThroughConversion" value=""/>
+    <add key="YAM_Map_ConversionValue" value=""/>
+    <add key="YAM_Map_AdvertiserSpending" value=""/>
+    <add key="YAM_Map_CampaignName" value=""/>
+    <add key="YAM_Map_CampaignId" value=""/>
+    <add key="YAM_Map_LineName" value=""/>
+    <add key="YAM_Map_LineId" value=""/>
+    <add key="YAM_Map_CreativeName" value=""/> <!--Creative - for old stats-->
+    <add key="YAM_Map_CreativeId" value=""/>
+    <add key="YAM_Map_AdName" value=""/>
+    <add key="YAM_Map_AdId" value=""/>
+    <add key="YAM_Map_PixelName" value=""/>
+    <add key="YAM_Map_PixelId" value=""/>
+    <add key="YAM_Map_PixelParameter" value=""/>
 
     <!--Outdated-->
     <add key="YAMMap_PostClickConv" value="Click Through Conversion" />
