Add a job retrying mechanism for the YAM command.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -203,6 +203,7 @@
     <add key="YAM_Map_PixelName" value=""/>
     <add key="YAM_Map_PixelId" value=""/>
     <add key="YAM_Map_PixelParameter" value=""/>
+    <add key="YamIntervalBetweenRequestsInMinutes" value="20"/>
 
     <!--Outdated-->
     <add key="YAMMap_PostClickConv" value="Click Through Conversion" />
