--- a/3/API/Yahoo/Yahoo.csproj
+++ b/3/API/Yahoo/Yahoo.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Constants\Enums\Metric.cs" />
     <Compile Include="Constants\ReportStatus.cs" />
     <Compile Include="Constants\Timezone.cs" />
+    <Compile Include="Exceptions\FailedReportGenerationException.cs" />
     <Compile Include="Helpers\ReportParametersHelper.cs" />
     <Compile Include="Helpers\YamLogger.cs" />
     <Compile Include="Models\CreateReportResponse.cs" />
@@ -64,8 +65,8 @@
     <Compile Include="Models\ReportPayload.cs" />
     <Compile Include="Models\ReportOption.cs" />
     <Compile Include="Models\ReportSettings.cs" />
-    <Compile Include="YAMUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="YamUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
