--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -409,7 +409,7 @@
     <Compile Include="Commands\DA\DASynchCriteoStats.cs" />
     <Compile Include="Commands\DA\DASynchDBMStats2.cs" />
     <Compile Include="Commands\DA\DASynchKochavaStats.cs" />
-    <Compile Include="Commands\DA\DASynchYAMStats.cs" />
+    <Compile Include="Commands\DA\DaSynchYamStats.cs" />
     <Compile Include="Commands\DA\DASynchYAMStats_Outdated.cs" />
     <Compile Include="Commands\EOMSynchCPCCommand.cs" />
     <Compile Include="Commands\DA\DASynchFacebookAdPreviews.cs" />
@@ -749,7 +749,7 @@
     <Compile Include="Etl\YAM\Extractors\CsvExtractors\RowModels\YamRow.cs" />
     <Compile Include="Etl\YAM\Extractors\CsvExtractors\YamCsvExtractor.cs" />
     <Compile Include="Etl\YAM\Extractors\CsvExtractors\RowMaps\YamRowMap.cs" />
-    <Compile Include="Etl\YAM\Helpers\YamStatsType.cs" />
+    <Compile Include="Etl\YAM\CommonClassesExtensions\YamStatsType.cs" />
     <Compile Include="Etl\YAM\Loaders\BaseYamSummaryLoader.cs" />
     <Compile Include="Etl\YAM\Loaders\MergeHelper.cs" />
     <Compile Include="Etl\YAM\Loaders\YamAdSummaryLoader.cs" />
