--- a/1/DirectAgents.Domain/packages.config
+++ b/1/DirectAgents.Domain/packages.config
@@ -5,5 +5,6 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="Z.EntityFramework.Plus.EF6" version="1.7.15" targetFramework="net452" />
 </packages>
