--- a/1/EomTool/EomTool.Domain/packages.config
+++ b/1/EomTool/EomTool.Domain/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
 </packages>
