--- a/3/API/Amazon/packages.config
+++ b/3/API/Amazon/packages.config
@@ -5,5 +5,6 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Polly" version="6.1.2" targetFramework="net461" />
   <package id="RestSharp" version="106.3.1" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="WatiN" version="2.1.0" targetFramework="net452" />
 </packages>
