--- a/3/API/Yahoo/packages.config
+++ b/3/API/Yahoo/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Polly" version="6.1.2" targetFramework="net461" />
   <package id="RestSharp" version="106.3.1" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
 </packages>
