--- a/3/BingAds/packages.config
+++ b/3/BingAds/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.BingAds.SDK" version="11.12.7" targetFramework="net461" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.0" targetFramework="net461" />
   <package id="System.ServiceModel.Http" version="4.5.1" targetFramework="net461" />
   <package id="System.ServiceModel.Primitives" version="4.5.1" targetFramework="net461" />
