--- a/3/CakeExtracter.ConsoleApplication/packages.config
+++ b/3/CakeExtracter.ConsoleApplication/packages.config
@@ -13,6 +13,7 @@
   <package id="Mono.Options" version="5.3.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="Quartz" version="2.1.2" targetFramework="net45" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.1.2" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net461" />
