--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -29,6 +29,7 @@
   <package id="Polly" version="6.1.2" targetFramework="net461" />
   <package id="Quartz" version="2.1.2" targetFramework="net45" />
   <package id="RestSharp" version="106.3.1" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net452" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net452" />
