--- a/3/ClientPortal.Data/packages.config
+++ b/3/ClientPortal.Data/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="EntityFramework.Extended" version="6.1.0.133" targetFramework="net45" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
 </packages>
