--- a/3/DAGenerators/packages.config
+++ b/3/DAGenerators/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EPPlus" version="4.5.2.1" targetFramework="net452" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
 </packages>
