--- a/3/DirectAgents.Web/CakeExtracter.Tests/packages.config
+++ b/3/DirectAgents.Web/CakeExtracter.Tests/packages.config
@@ -11,6 +11,7 @@
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.3" targetFramework="net461" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.8.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net461" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
 </packages>
