--- a/3/DirectAgents.Web/CakeExtractor.SqlScriptRunner/packages.config
+++ b/3/DirectAgents.Web/CakeExtractor.SqlScriptRunner/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net461" />
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net461" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
 </packages>
