--- a/3/DirectAgents.Web/CommissionJunction/packages.config
+++ b/3/DirectAgents.Web/CommissionJunction/packages.config
@@ -3,4 +3,5 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Polly" version="6.1.2" targetFramework="net461" />
   <package id="RestSharp" version="106.3.1" targetFramework="net461" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
 </packages>
