--- a/3/DirectAgents.Web/DirectAgents.Web/packages.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/packages.config
@@ -26,6 +26,7 @@
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
   <package id="ReportViewerForMvc" version="1.0.1" targetFramework="net45" />
+  <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net461" developmentDependency="true" />
   <package id="System.Linq.Dynamic.Core" version="1.0.9" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
