Add comments and refactoring to the database project and the YAM utility project, as well as to the used general classes.

--- a/3/API/Yahoo/Yahoo.csproj
+++ b/3/API/Yahoo/Yahoo.csproj
@@ -59,11 +59,11 @@
     <Compile Include="Exceptions\FailedReportGenerationException.cs" />
     <Compile Include="Helpers\ReportParametersHelper.cs" />
     <Compile Include="Helpers\YamLogger.cs" />
-    <Compile Include="Models\CreateReportResponse.cs" />
-    <Compile Include="Models\GetReportResponse.cs" />
-    <Compile Include="Models\GetTokenResponse.cs" />
-    <Compile Include="Models\ReportPayload.cs" />
-    <Compile Include="Models\ReportOption.cs" />
+    <Compile Include="Models\Responses\CreateReportResponse.cs" />
+    <Compile Include="Models\Responses\ReadReportStatusResponse.cs" />
+    <Compile Include="Models\Responses\CreateAccessTokenResponse.cs" />
+    <Compile Include="Models\Requests\ReportPayload.cs" />
+    <Compile Include="Models\Requests\ReportOption.cs" />
     <Compile Include="Models\ReportSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="YamUtility.cs" />
